@@ -7,9 +7,9 @@ using System.Security.Principal;
 using Gilgame.SEWorkbench.Services;
 
 using Sandbox.Common.ObjectBuilders.Definitions;
+using Sandbox.Game;
 using VRage.ObjectBuilders;
 using VRage.Plugins;
-using Sandbox.Game;
 
 namespace Gilgame.SEWorkbench
 {
@@ -35,25 +35,31 @@ namespace Gilgame.SEWorkbench
                 parent = Process.GetProcessById(Configuration.Convert.ToInteger(args[1]));
             }
 
-            string path = GetSandboxPath();
+            if (parent != null)
+            {
+                parent.Kill();
+            }
+
+            string path = Configuration.Program.SEPath;
             if (!SandboxIsCopied(path))
             {
                 if (!IsAdmin)
                 {
-                    Elevate();
+                    Restart(true);
                 }
 
-                bool success = CopySandbox();
+                if (!ValidPath(path))
+                {
+                    path = GetSandboxPath();
+                }
+
+                bool success = CopySandbox(path);
                 if (success)
                 {
-                    System.Windows.Forms.Application.Restart();
-                }
-                return;
-            }
+                    Configuration.Program.SEPath = path;
 
-            if (parent != null)
-            {
-                parent.Kill();
+                    Restart();
+                }
             }
 
             Views.SplashScreenView splash = new Views.SplashScreenView();
@@ -69,7 +75,6 @@ namespace Gilgame.SEWorkbench
             #endif
 
             RegisterPlugins();
-
             LoadClasses();
             LoadSerializers();
 
@@ -83,6 +88,30 @@ namespace Gilgame.SEWorkbench
             Gilgame.SEWorkbench.App app = new Gilgame.SEWorkbench.App();
             app.InitializeComponent();
             app.Run();
+        }
+
+        private static void Restart(bool elevate = false)
+        {
+            ProcessStartInfo info = new ProcessStartInfo()
+            {
+                WorkingDirectory = Environment.CurrentDirectory,
+                FileName = Process.GetCurrentProcess().MainModule.FileName,
+                UseShellExecute = true,
+                Arguments = "--pid " + Process.GetCurrentProcess().Id.ToString()
+            };
+            if (elevate)
+            {
+                info.Verb = "runas";
+            }
+
+            try
+            {
+                Process.Start(info);
+            }
+            catch (Exception ex)
+            {
+                MessageBox.ShowError("Failed to start the program", ex);
+            }
         }
 
         private static void Elevate()
@@ -109,7 +138,7 @@ namespace Gilgame.SEWorkbench
         private static bool SandboxIsCopied(string sepath)
         {
             string local = Directory.GetCurrentDirectory();
-            foreach(string assembly in GetDependencyNames())
+            foreach (string assembly in GetDependencyNames())
             {
                 string file = Path.Combine(local, assembly);
                 string sefile = Path.Combine(sepath, assembly);
@@ -131,16 +160,16 @@ namespace Gilgame.SEWorkbench
             return true;
         }
 
-        private static bool CopySandbox(string path = null)
+        private static bool CopySandbox(string path)
         {
-            string saveto = Directory.GetCurrentDirectory();
-            string sepath = (path == null) ? GetSandboxPath() : path;
+            string destination = Directory.GetCurrentDirectory();
+            string source = path;
 
             try
             {
                 foreach (string assembly in GetDependencyNames())
                 {
-                    CopyFile(Path.Combine(sepath, assembly), Path.Combine(saveto, assembly));
+                    CopyFile(Path.Combine(source, assembly), Path.Combine(destination, assembly));
                 }
 
                 return true;
@@ -168,6 +197,13 @@ namespace Gilgame.SEWorkbench
             }
         }
 
+        private static bool ValidPath(string path)
+        {
+            string exe = Path.Combine(path, "SpaceEngineers.exe");
+
+            return File.Exists(exe);
+        }
+
         private static string GetSandboxPath()
         {
             string sepath = Services.Registry.GetValue(
@@ -177,7 +213,7 @@ namespace Gilgame.SEWorkbench
                 String.Empty
             ).ToString();
 
-            if (String.IsNullOrEmpty(sepath))
+            if (String.IsNullOrEmpty(sepath) || !ValidPath(sepath))
             {
                 sepath = UserGetPath();
                 if (String.IsNullOrEmpty(sepath))
@@ -192,17 +228,27 @@ namespace Gilgame.SEWorkbench
             return sepath;
         }
 
-        private static void RegisterPlugins()
+        private static string UserGetPath()
         {
-            MyPlugins.RegisterGameObjectBuildersAssemblyFile("SpaceEngineers.ObjectBuilders.dll");
-            MyPlugins.RegisterSandboxAssemblyFile("Sandbox.Common.dll");
-            MyPlugins.RegisterSandboxGameAssemblyFile("Sandbox.Game.dll");
-        }
+            Services.MessageBox.ShowMessage("SE Workbench was unable to locate Space Engineers. You will now be prompted to locate SpaceEngineers.exe manually.");
+            Microsoft.Win32.OpenFileDialog dialog = new Microsoft.Win32.OpenFileDialog()
+            {
+                DefaultExt = ".exe",
+                Filter = "Space Engineers Executable (SpaceEngineers.exe)|SpaceEngineers.exe",
+                InitialDirectory = @"C:\Program Files (x86)\Steam\SteamApps\common\SpaceEngineers\Bin",
+            };
 
-        private static void EnableLogging()
-        {
-            VRage.Utils.MyLog.Default = new VRage.Utils.MyLog();
-            VRage.Utils.MyLog.Default.Init("test.log", new System.Text.StringBuilder());
+            Nullable<bool> result = dialog.ShowDialog();
+            if (result != null && result.Value == true)
+            {
+                string filename = dialog.FileName;
+                if (!String.IsNullOrEmpty(filename))
+                {
+                    return Path.GetDirectoryName(filename);
+                }
+            }
+
+            return String.Empty;
         }
 
         private static List<string> GetDependencyNames()
@@ -241,39 +287,19 @@ namespace Gilgame.SEWorkbench
             return assemblies;
         }
 
-        private static string UserGetPath()
+        #region Init
+
+        private static void RegisterPlugins()
         {
-            string path = Configuration.Program.SEPath;
+            MyPlugins.RegisterGameObjectBuildersAssemblyFile("SpaceEngineers.ObjectBuilders.dll");
+            MyPlugins.RegisterSandboxAssemblyFile("Sandbox.Common.dll");
+            MyPlugins.RegisterSandboxGameAssemblyFile("Sandbox.Game.dll");
+        }
 
-            if (String.IsNullOrEmpty(path) || !File.Exists(Path.Combine(path, "Sandbox.Common.dll")))
-            {
-                Services.MessageBox.ShowMessage("SE Workbench was unable to locate Space Engineers. You will now be prompted to locate SpaceEngineers.exe manually.");
-                Microsoft.Win32.OpenFileDialog dialog = new Microsoft.Win32.OpenFileDialog()
-                {
-                    DefaultExt = ".exe",
-                    Filter = "Space Engineers Executable (SpaceEngineers.exe)|SpaceEngineers.exe",
-                    InitialDirectory = @"C:\Program Files (x86)\Steam\SteamApps\common\SpaceEngineers\Bin",
-                };
-
-                Nullable<bool> result = dialog.ShowDialog();
-                if (result != null && result.Value == true)
-                {
-                    string filename = dialog.FileName;
-                    if (!String.IsNullOrEmpty(filename))
-                    {
-                        string found = Path.GetDirectoryName(filename);
-
-                        Configuration.Program.SEPath = found;
-                        return found;
-                    }
-                }
-
-                return null;
-            }
-            else
-            {
-                return path;
-            }
+        private static void EnableLogging()
+        {
+            VRage.Utils.MyLog.Default = new VRage.Utils.MyLog();
+            VRage.Utils.MyLog.Default.Init("test.log", new System.Text.StringBuilder());
         }
 
         private static void LoadSerializers()
@@ -305,5 +331,7 @@ namespace Gilgame.SEWorkbench
 
             Classes.AddRange(result);
         }
+
+        #endregion
     }
 }
